openshift/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ros2-demo-novnc
  namespace: lokesh-ros2-demo
  labels:
    app: ros2-sim
  annotations:
    haproxy.router.openshift.io/timeout: 10m
spec:
  to:
    kind: Service
    name: ros2-novnc
    weight: 100
  port:
    targetPort: novnc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ros2-demo-web
  namespace: lokesh-ros2-demo
  labels:
    app: ros2-sim
spec:
  to:
    kind: Service
    name: ros2-web
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
